--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <script src="client/input-mouse.js"></script>
 
     <script src="client/notJquery.js"></script>
-    <script src="client/narrative-engine.js"></script>
     <script src="client/utils.js"></script>
+
+    <script src="client/narrative-engine.js"></script>
+    <script src="client/game.js"></script>
     <script src="client/main.js"></script>
     <script src="client/index.js" async></script>
 
