--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
-    <title>GGJ2018</title>
+    <title>Tuned in... To Love</title>
    
     <link rel="stylesheet" type="text/css" href="assets/style.css"/>
     <link rel="icon" href="assets/icon.png" sizes="256x256" type="image/png"/>
