basic loader display

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
 
     <section id="display">
         <!-- PIXI CANVAS ENDS UP ABOVE THIS -->
+        <p style="text-align:center; font-family: monospace; color:white;">0%</p>
     </section>
 </body>
