--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
     <section id="display">
         <!-- PIXI CANVAS ENDS UP ABOVE THIS -->
-        <p style="text-align:center; font-family: monospace; color:white;">0%</p>
+        <p style="text-align:center; font-family: monospace; color:white; position:relative; top:45%">0%</p>
     </section>
 </body>
